--- a/BotOrNot/src/application/Statistics.fxml
+++ b/BotOrNot/src/application/Statistics.fxml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.StatisticsController">
+   <children>
+      <ListView fx:id="list" layoutX="54.0" layoutY="244.0" prefHeight="195.0" prefWidth="371.0" />
+      <Button fx:id="menuButton" layoutX="18.0" layoutY="455.0" mnemonicParsing="false" onAction="#menuPressed" text="Home" />
+      <Button fx:id="back2" layoutX="457.0" layoutY="461.0" mnemonicParsing="false" onAction="#back2Pressed" prefHeight="25.0" prefWidth="29.0" text="&lt;" />
+      <Label fx:id="gamesPlayed" layoutX="43.0" layoutY="86.0" text="Games Played:" />
+      <Label fx:id="other" layoutX="37.0" layoutY="206.0" text="Other User Stats:" />
+      <Label fx:id="avgKD" layoutX="263.0" layoutY="86.0" text="Avg KD: " />
+      <Label fx:id="avgDmg" layoutX="147.0" layoutY="86.0" text="Avg Damage:" />
+      <Label fx:id="avgPlace" layoutX="353.0" layoutY="86.0" text="Avg Placement:" />
+      <Label fx:id="your" layoutX="25.0" layoutY="33.0" text="Your Stats:" />
+      <TextField fx:id="gamesPlayed2" layoutX="53.0" layoutY="117.0" prefHeight="58.0" prefWidth="57.0" />
+      <TextField fx:id="avgDmg2" layoutX="154.0" layoutY="117.0" prefHeight="58.0" prefWidth="57.0" />
+      <TextField fx:id="avgKD2" layoutX="258.0" layoutY="117.0" prefHeight="58.0" prefWidth="57.0" />
+      <TextField fx:id="avgPlace2" layoutX="366.0" layoutY="117.0" prefHeight="58.0" prefWidth="57.0" />
+   </children>
 </AnchorPane>
 
