--- a/BotOrNot/src/application/AddView.fxml
+++ b/BotOrNot/src/application/AddView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddViewController">
+<AnchorPane fx:id="mainPane" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddViewController">
    <children>
       <Button fx:id="add" layoutX="177.0" layoutY="127.0" mnemonicParsing="false" onAction="#addPressed" prefHeight="91.0" prefWidth="146.0" text="ADD INFO" />
       <Button fx:id="view" layoutX="177.0" layoutY="250.0" mnemonicParsing="false" onAction="#viewPressed" prefHeight="91.0" prefWidth="146.0" text="VIEW STATS" />
@@ -13,4 +13,3 @@
       <Button fx:id="menuButton" layoutX="14.0" layoutY="461.0" mnemonicParsing="false" onAction="#menuPressed" text="Home" />
    </children>
 </AnchorPane>
-
